charts/react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: gic-group-9
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
