charts/react/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sneakr-ingress
  namespace: gic-group-9
spec:
  rules:
  - host: sneakr.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              name: http
